--- a/FillWords.Phone.8.0/PurchasesPage.xaml
+++ b/FillWords.Phone.8.0/PurchasesPage.xaml
@@ -1,6 +1,6 @@
 ﻿<phone:PhoneApplicationPage
+    x:Class="FillWords.Phone._8._0.PurchasesPage"
     xmlns:WPToolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
-    x:Class="FillWords.Phone._8._0.GameViewPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -13,7 +13,7 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
     WPToolkit:TiltEffect.IsTiltEnabled="True"
-    shell:SystemTray.IsVisible="False" Loaded="PhoneApplicationPage_Loaded" BackKeyPress="PhoneApplicationPage_BackKeyPress">
+    shell:SystemTray.IsVisible="False">
 
     <WPToolkit:TransitionService.NavigationInTransition>
         <WPToolkit:NavigationInTransition>
@@ -35,7 +35,7 @@
             </WPToolkit:NavigationOutTransition.Forward>
         </WPToolkit:NavigationOutTransition>
     </WPToolkit:TransitionService.NavigationOutTransition>
-    
+
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
@@ -45,7 +45,6 @@
         </Grid.RowDefinitions>
         <Grid.Background>
             <ImageBrush ImageSource="/Images/879142-480x800.jpg"/>
-            <!--<SolidColorBrush Color="Black"/>-->
         </Grid.Background>
 
         <!--Верхнее меню-->
@@ -65,15 +64,65 @@
                     <TextBlock x:Name="ratingText" Margin="10,5,10,5" FontSize="44" FontFamily="Comic Sans MS" TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontWeight="Bold"/>
                 </Border>
             </Grid>
-            <StackPanel x:Name="countHintsPanel" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Tap="countHintsPanel_Tap">
+            <StackPanel x:Name="countHintsPanel" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <TextBlock x:Name="countHintsText" Margin="0,0,5,0" FontSize="40" FontFamily="Comic Sans MS" TextAlignment="Center" Foreground="White" FontWeight="Bold"/>
                 <Image Margin="5,5,0,5" Source="/Images/menu/Lifebuoy-50-magenta.png"></Image>
             </StackPanel>
         </Grid>
 
-        <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Background="Transparent">
-            <StackPanel x:Name="rootPanel" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center"></StackPanel>
+        <Grid x:Name="ContentPanel" Grid.Row="1">
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Border x:Name="panelHints20" Padding="10" Margin="5" BorderBrush="White" BorderThickness="3" Background="#FFC20B8A" CornerRadius="10" VerticalAlignment="Center" HorizontalAlignment="Center" Tap="panelHints_Tap">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <TextBlock Text="{Binding Path=LocalizedResources.Hints20, Source={StaticResource LocalizedStrings}}" Foreground="White" FontSize="32" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                            <TextBlock Text="{Binding Path=LocalizedResources.PlusRemoveAds, Source={StaticResource LocalizedStrings}}" Foreground="Yellow" FontSize="22" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                        </StackPanel>
+                        <TextBlock Margin="20,0,0,0" Text="0.99" Foreground="White" FontSize="32" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                    </StackPanel>
+                </Border>
+
+                <Border x:Name="panelHints40" Padding="10" Margin="5" BorderBrush="White" BorderThickness="3" Background="#FFC20B8A" CornerRadius="10" VerticalAlignment="Center" HorizontalAlignment="Center" Tap="panelHints_Tap">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <TextBlock Text="{Binding Path=LocalizedResources.Hints40, Source={StaticResource LocalizedStrings}}" Foreground="White" FontSize="32" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                            <TextBlock Text="{Binding Path=LocalizedResources.PlusRemoveAds, Source={StaticResource LocalizedStrings}}" Foreground="Yellow" FontSize="22" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                        </StackPanel>
+                        <TextBlock Margin="20,0,0,0" Text="1.49" Foreground="White" FontSize="32" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                    </StackPanel>
+                </Border>
+
+                <Border x:Name="panelHints80" Padding="10" Margin="5" BorderBrush="White" BorderThickness="3" Background="#FFC20B8A" CornerRadius="10" VerticalAlignment="Center" HorizontalAlignment="Center" Tap="panelHints_Tap">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <TextBlock Text="{Binding Path=LocalizedResources.Hints80, Source={StaticResource LocalizedStrings}}" Foreground="White" FontSize="32" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                            <TextBlock Text="{Binding Path=LocalizedResources.PlusRemoveAds, Source={StaticResource LocalizedStrings}}" Foreground="Yellow" FontSize="22" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                        </StackPanel>
+                        <TextBlock Margin="20,0,0,0" Text="1.99" Foreground="White" FontSize="32" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                    </StackPanel>
+                </Border>
+
+                <Border x:Name="panelHints150" Padding="10" Margin="5" BorderBrush="White" BorderThickness="3" Background="#FFC20B8A" CornerRadius="10" VerticalAlignment="Center" HorizontalAlignment="Center" Tap="panelHints_Tap">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <TextBlock Text="{Binding Path=LocalizedResources.Hints150, Source={StaticResource LocalizedStrings}}" Foreground="White" FontSize="32" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                            <TextBlock Text="{Binding Path=LocalizedResources.PlusRemoveAds, Source={StaticResource LocalizedStrings}}" Foreground="Yellow" FontSize="22" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                        </StackPanel>
+                        <TextBlock Margin="20,0,0,0" Text="2.49" Foreground="White" FontSize="32" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                    </StackPanel>
+                </Border>
+
+                <Border x:Name="panelHintsAll" Padding="10" Margin="5" BorderBrush="White" BorderThickness="3" Background="#FFC20B8A" CornerRadius="10" VerticalAlignment="Center" HorizontalAlignment="Center" Tap="panelHints_Tap">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <TextBlock Text="{Binding Path=LocalizedResources.HintsAll, Source={StaticResource LocalizedStrings}}" Foreground="White" FontSize="32" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                            <TextBlock Text="{Binding Path=LocalizedResources.PlusRemoveAds, Source={StaticResource LocalizedStrings}}" Foreground="Yellow" FontSize="22" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                        </StackPanel>
+                        <TextBlock Margin="20,0,0,0" Text="4.99" Foreground="White" FontSize="32" FontFamily="Comic Sans MS" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                    </StackPanel>
+                </Border>
+            </StackPanel>
+
         </Grid>
 
         <!--Нижнее меню-->
